--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,19 @@
-version: '3'
+version: "3.8"
 services:
+  app:
+    build: .
+    restart: always
+    ports:
+      - 8081:8081
+    depends_on:
+      - db
   db:
-    image: mysql:latest
+    image: "mysql:5.7"
+    restart: always
+    ports:
+      - 3307:3306
     environment:
       MYSQL_ROOT_PASSWORD: agileSoftware
       MYSQL_DATABASE: agileSoftware
       MYSQL_USER: agileSoftware
       MYSQL_PASSWORD: agileSoftware
-    volumes:
-      - db_data:/var/lib/mysql
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - 8080:8080
-    depends_on:
-      - db
-volumes:
-  db_data:
