--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,8 @@
-
-
-
-
-
 spring.datasource.url=jdbc:mysql://db:3306/agileSoftware
 spring.datasource.username=agileSoftware
 spring.datasource.password=agileSoftware
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
+server.port=8081
