--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,24 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.20</version> <!-- Update the version if needed -->
+
+		</dependency>
+
+
+
+
 	</dependencies>
 
 	<build>
